--- a/src/pages/appPage/AppPage.scss
+++ b/src/pages/appPage/AppPage.scss
@@ -49,34 +49,42 @@
         justify-content: space-between;
         background-color: #263238;
         flex: 1;
-        width: 50%;
     }
 
     .right-panel {
         overflow: scroll;
         overflow-x: hidden;
-        padding: 1rem 1.5rem 1.5rem 1.5rem;
         background-color: #92A0B5;
         width: 50%;
 
-        .resume-buttons {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 1rem;
-        }
+        &-container {
+            padding: 1rem 1.5rem 1.5rem 1.5rem;
 
-        .resume-content {
-            display: flex;
-            width: 100%;
-            align-items: center;
-            justify-content: center;
+            .resume-buttons {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 1rem;
+            }
 
-            .resume {
-                border-radius: 2px;
-                aspect-ratio: 1/1.41;
-                background-color: #fff;
-                box-shadow: 0px 0px 15px -7px rgba(0, 0, 0, 0.75);
+            .resume-content {
+                display: flex;
+                width: 100%;
+                align-items: center;
+                justify-content: center;
+
+                .resume {
+                    border-radius: 2px;
+                    aspect-ratio: 1/1.41;
+                    background-color: #fff;
+                    box-shadow: 0px 0px 15px -7px rgba(0, 0, 0, 0.75);
+                }
             }
         }
     }
+}
+
+// predefined styles by codemirror
+.CodeMirror-wrap pre.CodeMirror-line,
+.CodeMirror-wrap pre.CodeMirror-line-like {
+    word-break: break-all;
 }
